@startuml pesel_app
skinparam classAttributeIconSize 0
class Pesel {
-_pesel
+generate
{static} _pesel_to_list(pesel)
    - _calculate_control_sum()
    - _is_pesel_length_valid()
    - _is_control_sum_valid()
    - _get_year_from_pesel()
    - _get_month_from_pesel()
    - _get_day_from_pesel()
    - _date_format_dictionary(format)
    + date_of_birth(format)
    + gender_check()
    + validate()
}

class GeneratePesel {
{Static} _get_random_number()
    - __call__(*args)
    - _get_year_to_generate_pesel(dob)
    - _get_day_to_generate_pesel(dob)
    - _month_dictionary(dob)
    - _get_month_to_generate_pesel(dob)
    - _is_gender_value_valid(gender)
    - _get_gender_value(gender)
    - _join_pesel_elements(dob, gender)
    - _make_control_sum(dob, gender)
    + generate(dob, gender)
    + fake_pesel(dob, gender)
}

class PeselNotValid
class GenderNotValid
class Exception

Exception <|-- PeselNotValid
Exception <|-- GenderNotValid

Pesel .. GeneratePesel
@enduml